--- a/src/app/components/beneficio/beneficio.component.html
+++ b/src/app/components/beneficio/beneficio.component.html
@@ -1,4 +1,10 @@
-<div class="cargando" *ngIf="!datosCargados">
+<div *ngIf="!datosCargados">
+    <p>
+        No se ha seleccionado ninguna empresa.
+    </p>
+</div>
+
+<div class="cargando" *ngIf="!datosCargados && empresa > 0">
     <div>
         <mat-spinner></mat-spinner>
     </div>
