--- a/src/app/components/empresas-asignadas/empresas-asignadas.component.html
+++ b/src/app/components/empresas-asignadas/empresas-asignadas.component.html
@@ -1,3 +1,58 @@
-<p>
-  empresas-asignadas works!
-</p>
+<div class="opcionesSuperiores">
+    <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
+    </mat-form-field>
+    <button mat-mini-fab color="primary" [swal]="NuevaEmpresa">
+        <i class="fas fa-plus"></i>
+    </button>
+</div>
+
+
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="fuente" matSort>
+
+        <ng-container matColumnDef="codigo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Código </th>
+            <td mat-cell *matCellDef="let element"> {{element.codigo}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Empresa </th>
+            <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="nif">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> NIF </th>
+            <td mat-cell *matCellDef="let element"> {{element.nif}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="warn" [swal]="BorrarEmpresa">
+                    <i class="far fa-trash-alt"></i>
+                </button>
+                <swal #BorrarEmpresa title="Eliminar empresa" type="warning" [showCancelButton]="true" (confirm)="deleteEmpresa(element.codigo)">
+                    <div *swalPartial class="textSwalBorrar">
+                        <p>
+                            ¿Desea eliminar la empresa seleccionada?
+                        </p>
+                        <p>
+                            <strong>{{element.nombre}}</strong>
+                        </p>
+                    </div>
+                </swal>
+            </td>
+        </ng-container>
+
+
+
+        <tr mat-header-row *matHeaderRowDef="columnasMobile()"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnasMobile();"></tr>
+    </table>
+
+    <mat-paginator pageSize="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
+
+<swal #NuevaEmpresa title="Añadir empresa" input="text" type="info" (confirm)="addEmpresa($event)">
+</swal>
