--- a/src/app/components/list-usuarios/list-usuarios.component.html
+++ b/src/app/components/list-usuarios/list-usuarios.component.html
@@ -1,30 +1,48 @@
-<table mat-table [dataSource]="fuente" class="mat-elevation-z8">
+<mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
+</mat-form-field>
 
-    <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-    </ng-container>
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="fuente" matSort>
 
-    <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-    </ng-container>
+        <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+            <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="acciones">
-        <th mat-header-cell *matHeaderCellDef> Acciones </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button>
-                <i class="far fa-edit"></i>
-            </button>
-            <button mat-icon-button color="primary">
-                <i class="far fa-trash-alt"></i>
-            </button>
-            <button [routerLink]="['/area-interna/empresas-asignadas']" mat-icon-button color="primary">
-                  <i class="fas fa-clipboard-list"></i>
-            </button>
-        </td>
-    </ng-container>
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+        <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button>
+                    <i class="far fa-edit"></i>
+                </button>
+                <button [routerLink]="['/area-interna/usuario/empresas', element._id]" mat-icon-button color="primary">
+                    <i class="fas fa-clipboard-list"></i>
+                </button>
+                <button mat-icon-button color="warn" [swal]="BorrarUsuario">
+                    <i class="far fa-trash-alt"></i>
+                </button>
+                <swal #BorrarUsuario title="Eliminar usuario" type="warning" [showCancelButton]="true" (confirm)="deleteUsuario(element._id)">
+                    <div *swalPartial class="textSwalBorrar">
+                        <p>
+                            ¿Desea eliminar el usuario seleccionado?
+                        </p>
+                        <p>
+                            <strong>{{element.nombre}}</strong>
+                        </p>
+                    </div>
+                </swal>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="columnasMobile()"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnasMobile();"></tr>
+    </table>
+
+    <mat-paginator pageSize="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
