--- a/src/app/components/beneficio/beneficio.component.scss
+++ b/src/app/components/beneficio/beneficio.component.scss
@@ -16,6 +16,14 @@
             margin-left: 10%;
             margin-right: 10%;
         }
+        min-height: 80vh;
+        span {
+            font-size: 1.2em;
+            font-weight: bold;
+        }
+        h3 {
+            font-weight: normal;
+        }
     }
     
     .cargando {
