--- a/src/app/components/beneficio/beneficio.component.html
+++ b/src/app/components/beneficio/beneficio.component.html
@@ -1,9 +1,3 @@
-<div *ngIf="!datosCargados">
-    <p>
-        No se ha seleccionado ninguna empresa.
-    </p>
-</div>
-
 <div class="cargando" *ngIf="!datosCargados && empresa > 0">
     <div>
         <mat-spinner></mat-spinner>
@@ -11,32 +5,16 @@
 
 </div>
 <div class="container" *ngIf="datosCargados">
-    <mat-card>
-        <mat-card-header>
-            <mat-card-title>
-                <h2>{{datosResultado.CodigoEmpresa}} - {{datosResultado.Empresa}}</h2>
-            </mat-card-title>
-            <mat-card-subtitle>{{datosResultado._GIE_nombre_contaFiscal}} - <a [attr.href]="emailResponsable">{{datosResultado._giedax_email2}}</a></mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <p>Resultado actual: <strong>{{datosResultado.Resultado | number:'.2-2'}}</strong></p>
-            <p>*El resultado mostrado es provisional.</p>
-        </mat-card-content>
-        <!-- <mat-card-actions>
-        <button mat-button>Ok</button>
-    </mat-card-actions> -->
-    </mat-card>
 
-    <mat-card>
+    <mat-card class="cardGrafico">
         <mat-card-header>
-            <h3>Compartiva de resultados</h3>
+            <h3>Resultado {{year}}: <span>{{data[2].value | currency:'EUR'}}</span></h3>
         </mat-card-header>
         <mat-card-content>
             <div class="grafComparativa">
-                <ngx-charts-bar-vertical [results]="data" Axis="true" yAxis="true" xAxis="true" xAxisLabel="Ejercicios" yAxisLabel="Resultado">
+                <ngx-charts-bar-vertical [results]="data" Axis="true" yAxis="true" xAxis="true" yScaleMax="0" xAxisLabel="Ejercicios" yAxisLabel="Resultado">
                 </ngx-charts-bar-vertical>
             </div>
         </mat-card-content>
-
     </mat-card>
 </div>
