--- a/src/app/components/list-usuarios/list-usuarios.component.html
+++ b/src/app/components/list-usuarios/list-usuarios.component.html
@@ -1,6 +1,12 @@
-<mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
-</mat-form-field>
+<div class="opcionesSuperiores">
+    <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
+    </mat-form-field>
+    <button mat-mini-fab color="primary" [routerLink]="[ '/area-interna/registro' ]">
+        <i class="fas fa-plus"></i>
+</button>
+</div>
+
 
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="fuente" matSort>
