--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,24 +1,24 @@
 <div class="container">
-    <form class="container-login" [formGroup]="form" (ngSubmit)="singIn()" novalidate>
-        <mat-form-field>
-            <input matInput type="email" formControlName="email">
-            <mat-label>
-                <mat-icon><i class="fas fa-user"></i></mat-icon> email
-            </mat-label>
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput type="password" formControlName="password">
-            <mat-label>
-                <mat-icon><i class="fas fa-key"></i></mat-icon> contraseña
-            </mat-label>
-        </mat-form-field>
-        <button color="primary" mat-raised-button type="submit" [disabled]="form.invalid">
+    <mat-card>
+        <form class="container-login" [formGroup]="form" (ngSubmit)="singIn()" novalidate>
+            <mat-form-field>
+                <input matInput type="email" formControlName="email">
+                <mat-label>
+                    <mat-icon><i class="fas fa-user"></i></mat-icon> email
+                </mat-label>
+            </mat-form-field>
+            <mat-form-field>
+                <input matInput type="password" formControlName="password">
+                <mat-label>
+                    <mat-icon><i class="fas fa-key"></i></mat-icon> contraseña
+                </mat-label>
+            </mat-form-field>
+            <button color="primary" mat-raised-button type="submit" [disabled]="form.invalid">
                 Acceder
             </button>
-    </form>
-    <p>
-        <a [routerLink]="[ '/registro' ]">Regístrate</a>
-    </p>
+        </form>
+    </mat-card>
+
 </div>
 
 <swal #ErrorLogin title="Error en el login" type="error">
