--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -7,19 +7,27 @@
     a {
         text-decoration: none;
     }
+    background-image: url("../../../assets/office1.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: inset 0px 0px 11px 11px rgba(255,
+    255,
+    255,
+    1);
+    mat-card {
+        min-width: 30%;
+        max-width: 80%;
+        width: 350px;
+        border: solid 5px rgb(212, 210, 210);
+    }
 }
 
 .container-login {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 30%;
-    max-width: 80%;
-    width: 350px;
-    padding: 20px;
-    box-shadow: 7px 7px 18px -6px rgba(0, 0, 0, 0.75);
-    border-radius: 3px;
-    border: solid 2px rgb(145, 0, 0);
+    // box-shadow: 8px 8px 15px -1px rgba(219, 219, 219, 1);
+    // border-radius: 3px;
     mat-form-field {
         width: 80%;
     }
