--- a/src/app/components/trabajadores/trabajadores.component.html
+++ b/src/app/components/trabajadores/trabajadores.component.html
@@ -1,3 +1,64 @@
-<p>
-  trabajadores works!
-</p>
+<mat-tab-group>
+    <mat-tab label="Fijos">
+        <mat-form-field class="filtro">
+            <input matInput (keyup)="applyFilterFijos($event.target.value)" placeholder="Buscar">
+        </mat-form-field>
+
+        <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="fuenteFijos" matSort #SortFijos="matSort">
+
+                <ng-container matColumnDef="Dni">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> DNI </th>
+                    <td mat-cell *matCellDef="let element"> {{element.Dni}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="RazonSocialEmpleado">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+                    <td mat-cell *matCellDef="let element"> {{element.RazonSocialEmpleado}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="FechaAntiguedad">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Antigüedad </th>
+                    <td mat-cell *matCellDef="let element"> {{element.FechaAntiguedad | date:'dd-MM-yyyy'}} </td>
+                </ng-container>
+
+
+                <tr mat-header-row *matHeaderRowDef="columnasMobile()"></tr>
+                <tr mat-row *matRowDef="let row; columns: columnasMobile();"></tr>
+            </table>
+
+            <mat-paginator #paginatorFijos pageSize="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+    </mat-tab>
+    <mat-tab label="Temporales">
+        <mat-form-field class="filtro">
+            <input matInput (keyup)="applyFilterTemporales($event.target.value)" placeholder="Buscar">
+        </mat-form-field>
+
+        <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="fuenteTemporales" matSort #SortTemporales="matSort">
+
+                <ng-container matColumnDef="Dni">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> DNI </th>
+                    <td mat-cell *matCellDef="let element"> {{element.Dni}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="RazonSocialEmpleado">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+                    <td mat-cell *matCellDef="let element"> {{element.RazonSocialEmpleado}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="FechaAntiguedad">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Antigüedad </th>
+                    <td mat-cell *matCellDef="let element"> {{element.FechaAntiguedad | date:'dd-MM-yyyy'}} </td>
+                </ng-container>
+
+
+                <tr mat-header-row *matHeaderRowDef="columnasMobile()"></tr>
+                <tr mat-row *matRowDef="let row; columns: columnasMobile();"></tr>
+            </table>
+
+            <mat-paginator #paginatorTemporales pageSize="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+    </mat-tab>
+</mat-tab-group>
