--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div class="logo-gie">
+        <img src="../../../assets/logo-gie.png">
+    </div>
     <mat-card>
         <form class="container-login" [formGroup]="form" (ngSubmit)="singIn()" novalidate>
             <mat-form-field>
