--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -32,3 +32,16 @@
         width: 80%;
     }
 }
+
+.logo-gie {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
+    img {
+        min-width: 30%;
+        max-width: 80%;
+        width: 350px;
+        height: auto;
+    }
+}
