--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,10 @@ body {
     padding: 12px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+.btnFabApp {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 5;
+}
